fix button alignment

--- a/src/App.css
+++ b/src/App.css
@@ -93,10 +93,6 @@
   color: #777;
 }
 
-.plaid-link {
-  margin-bottom: 10px;
-}
-
 div.layout {
   position: relative;
   top: 0;
